fix(media-queries): break at 600px instead of 650px

--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -29,7 +29,7 @@ a.e-button {
   text-decoration: none !important;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 600px) {
   .e-button {
     display: block;
   }
