--- a/src/vars/space.css
+++ b/src/vars/space.css
@@ -12,7 +12,7 @@
   --e-max-width-1: calc(12 * var(--e-space-5));
 }
 
-@media (max-width: 650px) {
+@media (max-width: 600px) {
   :root {
     --e-space-0: 0.3rem;
     --e-space-scale-ratio: 1.5;
